--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
        <div>
             <img src="../camera.jpg"/>
-            <p>$100</p>
+            <p>EUR 100</p>
             <a href="./dropin"><img src="../paynow.jpg"/></a>
        </div>
 
